# grid

./: CODEOWNERS  COMPATIBILITY_MATRIX.md  CONTRIBUTING.md  README.md  latest
.github/workflows/: release-notification.yaml
cli/: .env  .eslintrc.cjs  .gitignore  .golangci.yaml  .mockery.yaml  .prettierrc.cjs  Makefile  README.md  cli.go  doc.go  get-dps  go.mod  go.sum  gqlgen.yml  licensing.go  main.go  package.json  pnpm-lock.yaml
cli/_examples/: README.md
cli/cmd/: main.go
cli/deepsquare/: client.go  deepsquare.go  deepsquare_client.go  deepsquare_doc.go
cli/fixtures/: tdp-job.sh
cli/logger/: logger.go
cli/metascheduler/: ErrorContract.sol  metascheduler_allowancemanager.go  metascheduler_backend.go  metascheduler_client.go  metascheduler_creditmanager.go  metascheduler_doc.go  metascheduler_error.go  metascheduler_error_test.go  metascheduler_job_status.go  metascheduler_jobfetcher.go  metascheduler_jobs_by_provider_fetcher.go  metascheduler_jobs_by_provider_fetcher_test.go  metascheduler_jobscheduler.go  metascheduler_oracle.go  metascheduler_oracle_integration_test.go  metascheduler_providermanager.go  metascheduler_rpc.go  metascheduler_utils.go  metascheduler_ws.go
cli/sbatch/: generate.go  models_gen.go  sbatch.go  sbatch_test.go
cli/scripts/: 0.go.install-generators.sh  1.generate-eth.sh  2.generate-grpc.sh  3.generate-json-schema.js  999.build-all.sh
cli/tools/: tools.go
cli/tui/: main.go  tui_doc.go
cli/types/: types.go
cli/version/: version_check.go  version_check_test.go
docs/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  README.md  babel.config.js  bun.lockb  check-valid-link.sh  check-valid-links.py  docusaurus.config.js  generate-json-schema.mjs  generate-json-schema.ts  jsconfig.json  package.json  pnpm-lock.yaml
docs/deepsquare-grid/: 000-overview.mdx
docs/schemas/: job.schema.json
docs/static/: CNAME
docs/workflow/: 000-overview.mdx  000-quick-start.md
grid-logger/: .dockerignore  .gitignore  .reader.env  .reader.env.prod  .server.env  Dockerfile  Makefile  README.md  docker-compose.yaml  envoy.yaml  go.mod  go.sum  job.prod.sh  job.sh  licensing.go  secret.key
grid-logger/client/: main.go
grid-logger/logger/: logger.go
grid-logger/reader/: main.go
grid-logger/server/: main.go
grid-logger/tools/: tools.go
grid-logger/web-client/: .eslintrc.cjs  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
grid-logger/writer/: main.go
ldap-connector/: .env  Dockerfile  README.md  config.yaml  go.mod  go.sum  main.go
ldap-connector/cmd/: main.go
ldap-connector/config/: config.go
ldap-connector/ldap/: ldap_datasource.go  ldap_datasource_test.go
ldap-connector/scripts/: 0.go.install-generators.sh  1.generate-eth.sh
ldap-connector/validate/: validate.go
ldap-connector/watcher/: watcher.go
provider-job-completion-plugin/: .dockerignore  CMakeLists.txt  Dockerfile.controller  Dockerfile.deb  Dockerfile.rpm  LICENSE  README.md  build-and-export.sh  compile_flags.txt  project.cmake
provider-job-completion-plugin/cmake/: dependencies.cmake  package.cmake
provider-job-completion-plugin/scripts/: 0.go.install-generators.sh  1.generate-grpc.sh
provider-job-completion-plugin/src/: job_api.cc  job_api.h  jobcomp_provider.cc  report.cc  report.h  slurm_utils.cc  slurm_utils.h
provider-spank-plugin/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.compute  Dockerfile.deb  Dockerfile.rpm  README.md  build-and-export.sh  compile_flags.txt  project.cmake
provider-spank-plugin/ci/: versions_checker.sh
provider-spank-plugin/cmake/: dependencies.cmake  package.cmake
provider-spank-plugin/src/: config.cc  config.h  job_api.cc  job_api.h  report.h  slurm_utils.cc  slurm_utils.h  spank_provider.cc
provider-ssh-authorized-keys/: .gitignore  Dockerfile  Dockerfile.login  Makefile  README.md  go.mod  go.sum  main.go
provider-ssh-authorized-keys/logger/: logger.go
provider-ssh-authorized-keys/scripts/: 0.go.install-generators.sh  1.generate-grpc.sh  999.build-all.sh
sbatch-service/: .env  .golangci.yaml  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum  gqlgen.yml  job.sh  pod.yaml  server.go  test.sh
sbatch-service/auth/: auth.go
sbatch-service/cmd/: render.go
sbatch-service/fixtures/: async-await.yaml  blender-batch-job.txt  blender-batch-job.yaml  cs2.txt  cs2.yaml  fire-and-forget-clean.yaml  fire-and-forget.yaml  fixtures_test.go  kasmvnc.yaml  map-uid.pasta.txt  map-uid.pasta.yaml  map-uid.txt  map-uid.yaml  minecraft-vyos.config  minecraft.txt  minecraft.yaml  module.yaml  mpi-test.json  multi-node.yaml  multiline-env.yaml  neko.holepunch.yaml  neko.yaml  nginx.yaml  stable-diffusion.txt  stable-diffusion.yaml  tdp.json  tdp.txt  tdp.yaml  test.yaml  tgi.txt  tgi.yaml  try-catch-finally.yaml  upscale.txt  upscale.yaml  urs.txt  urs.yaml  virtual-networks.txt  virtual-networks.yaml
sbatch-service/graph/: generate.go  generated.go  resolver.go  schema.resolvers.go
sbatch-service/logger/: logger.go
sbatch-service/module/: module_renderer.go  module_renderer_test.go  module_resolver.go  module_resolver_test.go  resolver.go  resolver_test.go
sbatch-service/renderer/: funcs.go  funcs_test.go  job.sh.tpl  mocks_test.go  renderer.go  renderer_apptainer_command.go  renderer_apptainer_command.sh.tpl  renderer_apptainer_command_test.go  renderer_enroot_command.go  renderer_enroot_command.sh.tpl  renderer_enroot_command_test.go  renderer_job.go  renderer_job.sh.tpl  renderer_job_test.go  renderer_pasta.go  renderer_pasta.sh.tpl  renderer_pasta_test.go  renderer_shellcheck.go  renderer_shellcheck_test.go  renderer_slirp4netns.go  renderer_slirp4netns.sh.tpl  renderer_slirp4netns_test.go  renderer_step.go  renderer_step.sh.tpl  renderer_step_async_launch.go  renderer_step_async_launch.sh.tpl  renderer_step_for.go  (+21 more)
smart-contracts-exporter/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum  gqlgen.yml  main.go
supervisor/: .env  .gitignore  .mockery.yaml  Dockerfile  Makefile  README.md  go.mod  go.sum  licensing.go  main.go
(+556 files in other folders)
